src/adaptive_cards_renderer/tests/snapshots/snapshot_tests__snapshots@column_set_vertical_separator.card.json.snap
---
source: adaptive_cards_renderer/tests/snapshot_tests.rs
expression: snapshot
input_file: adaptive_cards_renderer/tests/snapshot_inputs/column_set_vertical_separator.card.json
---
{
  "card": {
    "$schema": "../../../../adaptive_cards_data/schema/adaptive-card.schema.json",
    "body": [
      {
        "type": "ColumnSet",
        "columns": [
          {
            "items": [
              {
                "type": "TextBlock",
                "text": "1",
                ".layout": {
                  "rect": {
                    "x": 33,
                    "y": 33,
                    "width": 8,
                    "height": 18
                  },
                  "placement": "SoleVertical"
                }
              }
            ],
            "separator": true,
            "style": "accent",
            "type": "Column",
            ".layout": {
              "rect": {
                "x": 16,
                "y": 16,
                "width": 42,
                "height": 52
              },
              "placement": "Left"
            }
          },
          {
            "items": [
              {
                "type": "TextBlock",
                "text": "2",
                ".layout": {
                  "rect": {
                    "x": 87,
                    "y": 33,
                    "width": 8,
                    "height": 18
                  },
                  "placement": "SoleVertical"
                }
              }
            ],
            "separator": false,
            "style": "accent",
            "type": "Column",
            ".layout": {
              "rect": {
                "x": 70,
                "y": 16,
                "width": 42,
                "height": 52
              },
              "placement": "WithinHorizontal"
            }
          },
          {
            "items": [
              {
                "type": "TextBlock",
                "text": "Slipway 3",
                ".layout": {
                  "rect": {
                    "x": 142,
                    "y": 33,
                    "width": 225,
                    "height": 18
                  },
                  "placement": "SoleVertical"
                }
              }
            ],
            "separator": true,
            "style": "accent",
            "width": {
              "BlockElementWidth": "stretch"
            },
            "type": "Column",
            ".layout": {
              "rect": {
                "x": 125,
                "y": 16,
                "width": 259,
                "height": 52
              },
              "placement": "Right"
            }
          }
        ],
        ".layout": {
          "rect": {
            "x": 16,
            "y": 16,
            "width": 368,
            "height": 52
          },
          "placement": "SoleVertical"
        }
      }
    ],
    "version": "1.5",
    "type": "AdaptiveCard",
    ".layout": {
      "rect": {
        "x": 0,
        "y": 0,
        "width": 400,
        "height": 100
      }
    }
  },
  "debug_lines": [
    "TREE",
    "└──  FLEX COL [x: 0    y: 0    w: 400  h: 100  content_w: 384  content_h: 68   border: l:0 r:0 t:0 b:0, padding: l:16 r:16 t:16 b:16] (NodeId(4294967306))",
    "    └──  FLEX ROW [x: 16   y: 16   w: 368  h: 52   content_w: 368  content_h: 52   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967305))",
    "        ├──  FLEX COL [x: 0    y: 0    w: 42   h: 52   content_w: 25   content_h: 35   border: l:0 r:0 t:0 b:0, padding: l:17 r:17 t:17 b:17] (NodeId(4294967298))",
    "        │   └──  LEAF [x: 17   y: 17   w: 8    h: 18   content_w: 8    content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967297))",
    "        ├──  LEAF [x: 42   y: 0    w: 12   h: 52   content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967299))",
    "        ├──  FLEX COL [x: 54   y: 0    w: 42   h: 52   content_w: 25   content_h: 35   border: l:0 r:0 t:0 b:0, padding: l:17 r:17 t:17 b:17] (NodeId(4294967301))",
    "        │   └──  LEAF [x: 17   y: 17   w: 8    h: 18   content_w: 8    content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967300))",
    "        ├──  LEAF [x: 96   y: 0    w: 13   h: 52   content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967302))",
    "        └──  FLEX COL [x: 109  y: 0    w: 259  h: 52   content_w: 242  content_h: 35   border: l:0 r:0 t:0 b:0, padding: l:17 r:17 t:17 b:17] (NodeId(4294967304))",
    "            └──  LEAF [x: 17   y: 17   w: 225  h: 18   content_w: 59   content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967303))"
  ]
}
