src/adaptive_cards_renderer/tests/snapshots/snapshot_tests__snapshots@container_fat_horizontal_separator.card.json.snap
---
source: adaptive_cards_renderer/tests/snapshot_tests.rs
expression: card
input_file: adaptive_cards_renderer/tests/snapshot_inputs/container_fat_horizontal_separator.card.json
---
{
  "$schema": "../../../../adaptive_cards_data/schema/adaptive-card.schema.json",
  "body": [
    {
      "type": "Container",
      "items": [
        {
          "type": "TextBlock",
          "text": "1",
          ".layout": {
            "rect": {
              "x": 33,
              "y": 33,
              "width": 84,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "separator": true,
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 16,
          "y": 16,
          "width": 118,
          "height": 44
        },
        "placement": "Top"
      }
    },
    {
      "type": "Container",
      "items": [
        {
          "type": "TextBlock",
          "text": "2",
          ".layout": {
            "rect": {
              "x": 33,
              "y": 89,
              "width": 84,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "separator": false,
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 16,
          "y": 72,
          "width": 118,
          "height": 44
        },
        "placement": "WithinVertical"
      }
    },
    {
      "type": "Container",
      "height": "stretch",
      "items": [
        {
          "type": "TextBlock",
          "text": "3",
          ".layout": {
            "rect": {
              "x": 33,
              "y": 150,
              "width": 84,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "separator": true,
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 16,
          "y": 133,
          "width": 118,
          "height": 51
        },
        "placement": "Bottom"
      }
    }
  ],
  "version": "1.5",
  "type": "AdaptiveCard",
  ".layout": {
    "rect": {
      "x": 0,
      "y": 0,
      "width": 150,
      "height": 200
    }
  }
}
