src/adaptive_cards_renderer/tests/snapshots/snapshot_tests__snapshots@container_multiple_item_bleed.card.json.snap
---
source: adaptive_cards_renderer/tests/snapshot_tests.rs
expression: card
input_file: adaptive_cards_renderer/tests/snapshot_inputs/container_multiple_item_bleed.card.json
---
{
  "$schema": "../../../../adaptive_cards_data/schema/adaptive-card.schema.json",
  "body": [
    {
      "type": "Container",
      "bleed": true,
      "items": [
        {
          "type": "TextBlock",
          "text": "1",
          ".layout": {
            "rect": {
              "x": 17,
              "y": 17,
              "width": 116,
              "height": 18
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 0,
          "y": 0,
          "width": 150,
          "height": 52
        },
        "placement": "Top"
      }
    },
    {
      "type": "Container",
      "bleed": true,
      "height": "stretch",
      "items": [
        {
          "type": "TextBlock",
          "text": "2",
          ".layout": {
            "rect": {
              "x": 17,
              "y": 81,
              "width": 116,
              "height": 18
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 0,
          "y": 64,
          "width": 150,
          "height": 204
        },
        "placement": "WithinVertical"
      }
    },
    {
      "type": "Container",
      "bleed": true,
      "items": [
        {
          "type": "TextBlock",
          "text": "3",
          ".layout": {
            "rect": {
              "x": 17,
              "y": 297,
              "width": 116,
              "height": 18
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 0,
          "y": 280,
          "width": 150,
          "height": 52
        },
        "placement": "Bottom"
      }
    }
  ],
  "version": "1.5",
  "type": "AdaptiveCard",
  ".layout": {
    "rect": {
      "x": 0,
      "y": 0,
      "width": 150,
      "height": 300
    }
  }
}
