src/adaptive_cards_renderer/tests/snapshots/snapshot_tests__snapshots@fact_set_long_title.card.json.snap
---
source: adaptive_cards_renderer/tests/snapshot_tests.rs
expression: card
input_file: adaptive_cards_renderer/tests/snapshot_inputs/fact_set_long_title.card.json
---
{
  "$schema": "../../../../adaptive_cards_data/schema/adaptive-card.schema.json",
  "body": [
    {
      "type": "FactSet",
      "facts": [
        {
          "title": "A",
          "value": "32.5",
          "type": "Fact"
        },
        {
          "title": "B",
          "value": "35562",
          "type": "Fact"
        },
        {
          "title": "She saw sea shells on the sea shore",
          "value": "Blah",
          "type": "Fact"
        },
        {
          "title": "d",
          "value": "-",
          "type": "Fact"
        }
      ],
      ".layout": {
        "rect": {
          "x": 16,
          "y": 16,
          "width": 268,
          "height": 138
        },
        "placement": "SoleVertical"
      }
    }
  ],
  "version": "1.6",
  "type": "AdaptiveCard",
  ".layout": {
    "rect": {
      "x": 0,
      "y": 0,
      "width": 300,
      "height": 250
    }
  }
}
